Fixed twitch being too small

--- a/ozapt/static/ozapt/index.css
+++ b/ozapt/static/ozapt/index.css
@@ -4,3 +4,7 @@
     margin-top: 10px;
     gap: 10px;
 }
+
+#twitch-embed {
+    height: 100%;
+}
